--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "react": "16.8.3",
     "react-native": "0.59.8",
+    "react-native-double-tap": "^1.0.1",
     "react-native-tts": "^3.0.0"
   },
   "devDependencies": {
