--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "16.8.3",
     "react-native": "0.59.8",
     "react-native-double-tap": "^1.0.1",
+    "react-native-swipe-gestures": "^1.0.4",
     "react-native-tts": "^3.0.0"
   },
   "devDependencies": {
